--- a/TVision/src/TVision/main.form
+++ b/TVision/src/TVision/main.form
@@ -74,7 +74,7 @@
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="2" rowCount="0">
                 <Column editable="false" title="&#x5e9;&#x5dd; &#x5d4;&#x5e2;&#x5e8;&#x5d5;&#x5e5;" type="java.lang.String"/>
-                <Column editable="false" title="&#x5de;&#x5d6;&#x5d4;&#x5d4; &#x5d4;&#x5e2;&#x5e8;&#x5d5;&#x5e5;" type="java.lang.String"/>
+                <Column editable="false" title="#" type="java.lang.String"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -91,6 +91,7 @@
                 </Column>
               </TableColumnModel>
             </Property>
+            <Property name="columnSelectionAllowed" type="boolean" value="true"/>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
               <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
             </Property>
